# advent-of-code-2024-rs

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md
2024/: Cargo.toml
2024/inputs/: .gitignore
2024/src/: lib.rs  main.rs
